[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/buildings/investigation_centre/investigation_centre.png" type="Texture" id=1]
[ext_resource path="res://gameplay/buildings/investigation_centre/investigation_centre.gd" type="Script" id=2]
[ext_resource path="res://gameplay/gui/building_menu/building_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/gui/energy_label/energy_label.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 214.93, 212.609 )

[node name="investigation_centre" type="StaticBody2D" groups=[
"buildings",
"consumers",
"interactuables",
]]
collision_layer = 4
collision_mask = 33
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -371.0
margin_top = -214.0
margin_right = 213.0
margin_bottom = 327.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 0.85098, 0.882353, 0.321569, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="label" type="Label" parent="."]
margin_left = -32.0
margin_top = -53.0
margin_right = 32.0
margin_bottom = -39.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="investigation_timer" type="Timer" parent="." groups=[
"interactuables",
]]

[node name="building_menu" parent="." instance=ExtResource( 3 )]
position = Vector2( -28.5773, -17.7114 )

[node name="energy_label" parent="." instance=ExtResource( 4 )]
[connection signal="timeout" from="investigation_timer" to="." method="_on_investigation_timer_timeout"]
